[project]
name = "data-cleaning-agent-openenv"
version = "1.0.0"
description = "OpenEnv-compatible data cleaning environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "numpy",
  "openenv-core>=0.2.0",
  "openai",
  "pandas",
  "pydantic",
  "pyyaml",
  "requests",
  "uvicorn[standard]",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
